--- a/example.ipynb
+++ b/example.ipynb
@@ -46,7 +46,7 @@
     "    raise NotImplementedError(\"Automatic Submission only works in Google Colab, please upload your code manually\")\n",
     "from requests import post\n",
     "notebook_json_string = _message.blocking_request('get_ipynb', request='', timeout_sec=5)\n",
-    "main_url=\"www.annie.simonklug.de/upload\"\n",
+    "main_url=\"https://www.annie.simonklug.de/upload\"\n",
     "assignment=\"Getting%20Started%20with%20Pandas\" # Or Maybe NB name\n",
     "submissionurl=main_url+assignment\n",
     "auth_token=input(\"Please enter your auth token here:\")\n",
